tests/snapshots/render__build_absolute_times.snap
---
source: tests/render.rs
expression: build
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"backend/api/release-1.2 · #42 · 4 of 4 ─────────────────────────────────────────"
" Result      ● failed                                                           "
" Started     2023-11-14 22:08:20                                                "
" Duration    2m 13s                                                             "
" Stages      ● Checkout 4s ─▶ ● Build 1m 02s ─▶ ✕ Test 38s ─▶ ○ Deploy          "
" Cause       Started by user Hans                                               "
" Parameters  ENV = prod                                                         "
"             DRY_RUN = false                                                    "
" Description Release candidate                                                  "
"                                                                                "
" Changes (2)                                                                    "
"   0123abcd Fix login redirect — Alice                                          "
"   Bump version                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" ←/→  older/newer   c  console   b  build again   Esc  back Absolute timestamps "
