tests/snapshots/render__build_finished.snap
---
source: tests/render.rs
expression: render(&app_with_build(Some(finished_build()))).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds                                                   0 Settings "
"backend/api/release-1.2 · #42 · 4 of 4 ─────────────────────────────────────────"
" Result      ● failed                                                           "
" Started     5m ago                                                             "
" Duration    2m 13s                                                             "
" Cause       Started by user Hans                                               "
" Parameters  ENV = prod                                                         "
"             DRY_RUN = false                                                    "
" Description Release candidate                                                  "
"                                                                                "
" Changes (2)                                                                    "
"   0123abcd Fix login redirect — Alice                                          "
"   Bump version                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" ←/→  older/newer   Home/End  first/last   c  console   Esc  back   ↑/↓  scroll "
