tests/snapshots/render__builds_tab_list.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Builds (5 newest) · ↓ at the end loads more ────────────────────────────────────"
"▶ ⟳ running   backend/api/release-1.2 #46                       2m ago   2m 30s…"
"  ● success   backend/api/main #56                             10m ago    1m 35s"
"  ● failed    frontend/web/main #12                             1h ago    5m 12s"
"  ● aborted   docs #7                                           1d ago       12s"
"  ● unstable  backend/worker #88                                1d ago    1m 01s"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  open build   b  build again   /  filter                                 "
