tests/snapshots/render__help_open.snap
---
source: tests/render.rs
expression: "render_after(&[Action::ToggleHelp]).backend()"
---
" Leeroy  ○ not connected                                              h/?  help "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Jobs ───────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                         No Jenkins instance configured                         "
"             ╔ Help ══════════════════════════════════════════════╗             "
"             ║ Global                                             ║             "
"             ║       q  quit            h/?  help                 ║             "
"             ║       i  instance info     o  open in browser      ║             "
"             ║       r  refresh           R  toggle auto-refresh  ║             "
"             ║                                                    ║             "
"             ║ Tabs                                               ║             "
"             ║       1  Jobs              2  Builds               ║             "
"             ║       3  Pipelines         4  Pipeline runs        ║             "
"             ║       0  Settings                                  ║             "
"             ║                                                    ║             "
"             ║ Navigation                                         ║             "
"             ║     ↑/↓  select                                    ║             "
"             ║   Enter  last build                                ║             "
"             ║       /  filter                                    ║             "
"             ╚════════════════════════════════════════════════════╝             "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Esc  close                                                                     "
