tests/snapshots/render__initial_screen.snap
---
source: tests/render.rs
expression: "render_after(&[]).backend()"
---
" Leeroy  ○ not connected                                                        "
" F1 Jobs                                                                        "
"Jobs ───────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                         No Jenkins instance configured                         "
"                            Press s to open settings                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" ↑/↓  select   Enter  last build   /  filter                                    "
" q  quit   s  settings   ?  help   r  refresh   R  toggle auto-refresh          "
