tests/snapshots/render__jobs_connected_anonymously_with_tls_unverified.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ⚠ TLS NOT VERIFIED ● https://ci.example.com · Jenkins 2.504.1 · anonymo"
"╭ Jobs ────────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│                            Connected as anonymous                            │"
"│            Set a username and API token in settings (s) to log in            │"
"│                        Job list is not implemented yet                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Jobs                                                                           "
" q  quit   s  settings   ?  help                                                "
