tests/snapshots/render__jobs_connecting.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ◌ https://ci.example.com · connecting…                       h/?  help "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Jobs ───────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                      Connecting to https://ci.example.com…                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  last build   /  filter                                                  "
