tests/snapshots/render__jobs_connection_failed.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ✕ https://ci.example.com · cannot connect: dns error: failed h/?  help "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Jobs ───────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                       Cannot reach https://ci.example.com                      "
"         cannot connect: dns error: failed to lookup address information        "
"                   Check the settings (0), or press r to retry                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  last build   b  build   /  filter                                       "
